fixed spacing on project-overview, started footer content

--- a/app/sass/pages/_portfolio.scss
+++ b/app/sass/pages/_portfolio.scss
@@ -12,14 +12,20 @@ li.project {
 	&:not(:last-child) {
 		margin-bottom:1rem;
 	}
+	@include transition(all 0.1s ease);
 	&:nth-child(2), &:last-child {
 		a.portfolio-image {
-			border-right:1px solid $border-grey;
+			border-bottom:1px solid $border-grey;
 		}
 	}
-	@include transition(all 0.1s ease);
 	@include media($desktop) {
 		height:13rem;
+		&:nth-child(2), &:last-child {
+			a.portfolio-image {
+				border-bottom:0;
+				border-right:1px solid $border-grey;
+			}
+		}
 	}
 	@include media($widescreen) {
 		@include span-columns(6);
