--- a/app/sass/pages/_project-overview.scss
+++ b/app/sass/pages/_project-overview.scss
@@ -16,6 +16,9 @@ section.project-main {
 	.row {
 	  &:not(:last-child) {
 	    margin-bottom:2rem;
+	    @include media($desktop) {
+	    	margin-bottom:4rem;
+	    }
 	  }
 	}
 	h1 {
