--- a/app/sass/partials/_footer.scss
+++ b/app/sass/partials/_footer.scss
@@ -5,5 +5,12 @@ footer {
   section {
   	padding:2rem;
     border-radius:9px;
+    a {
+    	@include text-link;
+    	i {
+    		color:#444;
+    		font-size:1.3em;
+    	}
+    }
   }
 }
